# django-vite-shadcn

./: .gitignore  locustfile.py  package.json  pyproject.toml
account/: admin.py  models.py  urls.py
account/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_storemanager_unique_together.py
app/: admin.py  context_processors.py  middleware.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templatetags/: vite.py
decom/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
ecommerce/: admin.py  models.py
ecommerce/filters/: base.py  product.py
ecommerce/migrations/: 0001_initial.py  0002_alter_productreview_unique_together.py  0003_cart_is_active_alter_cart_unique_together.py  0004_alter_cart_unique_together.py
ecommerce/mixins/: __init__.py
ecommerce/models/: __init__.py  analytics.py  base.py  brand.py  inventory.py  marketting.py  order.py  payment.py  product.py  reports.py
ecommerce/urls/: __init__.py
ecommerce/views/: __init__.py
fileserver/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  global.css  globals.css  index.tsx  ingest.tsx  main.tsx
seeds/: populate_products.py
static/css/: custom.css  detailspageimageslider.css  homeproductsliderthree.css  (+4 more)
templates/: base.html  index.html  settings.html
ui/: admin.py  filters.py  models.py  serializer.py  urls.py  views.py
(+131 files in other folders)
